# Investica

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: app.py  graph.py  main.py
app/agents/: __init__.py  chart_agent.py
app/agents/financial_analyst/: agent.py  mcp_config.json  server.py
app/agents/zerodha_agent/: agent.py  app.py  mcp_config.json
app/core/: __init__.py  config.py
app/tools/: charts.py  mail.py
app/utils/: __init__.py  model.py  prompts.py
